# raylib-template

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yaml
cmake/: FindRaylib.cmake
